--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "mongodb": "6.14",
-    "openai": "^4.87.4"
+    "openai": "^4.87.4",
+    "uuid": "^11.1.0"
   }
 }
