--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
+    "json-bigint": "^1.0.0",
     "mongodb": "6.14",
     "openai": "^4.87.4",
     "uuid": "^11.1.0"
