--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "json-bigint": "^1.0.0",
     "mongodb": "6.14",
+    "node-fetch": "^3.3.2",
     "openai": "^4.87.4",
     "uuid": "^11.1.0"
   }
