--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@discordjs/voice": "^0.18.0",
+    "@noble/ciphers": "^1.3.0",
     "chalk": "^5.4.1",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
+    "ffmpeg": "^0.0.4",
+    "ffmpeg-static": "^5.2.0",
     "json-bigint": "^1.0.0",
+    "libsodium-wrappers": "^0.7.15",
     "mongodb": "6.14",
     "node-fetch": "^3.3.2",
     "openai": "^4.87.4",
+    "prism-media": "^1.3.5",
+    "tweetnacl": "^1.0.3",
     "uuid": "^11.1.0"
   }
 }
